--- a/packages/hexon-web/src/styles/index.less
+++ b/packages/hexon-web/src/styles/index.less
@@ -1,5 +1,8 @@
 @import "./normalize.less";
 @import "./font.less";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 * {
   box-sizing: border-box;
 }
