feat: template for frontmatters (#14)
close #1

---

- [x] test pass
- [x] build pass

Reviewed-on: https://git.yujianghao.cn/winwin2011/hexon/pulls/14

--- a/packages/web/src/styles/index.less
+++ b/packages/web/src/styles/index.less
@@ -5,3 +5,9 @@
 body {
   -webkit-font-smoothing: antialiased;
 }
+.modal-panel {
+  width: 960px;
+  max-width: calc(100vw - 100px) !important;
+  height: 640px;
+  max-height: calc(100vh - 100px) !important;
+}
